--- a/labx-08/pom.xml
+++ b/labx-08/pom.xml
@@ -2,15 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<parent>
+		<artifactId>labs-parent</artifactId>
+		<groupId>cn.cyrstal.springboot.labs</groupId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
 	<modelVersion>4.0.0</modelVersion>
-
-	<groupId>cn.cyrstal.springboot.labs</groupId>
-	<artifactId>labs-parent</artifactId>
-	<version>1.0-SNAPSHOT</version>
-	<modules>
-		<module>labx-08</module>
-	</modules>
 	<packaging>pom</packaging>
+
+	<artifactId>labx-08</artifactId>
 
 
 </project>
